@@ -3,6 +3,7 @@ Version 1.11.15+dev:
    * Updated translations:
  * Miscellaneous and bug fixes:
    * Backported Elvish_Hunter's wmltools GUI from master
+   * Fix bug #22116: unlock movement when attacking enemy+discovering in fog
 
 Version 1.11.15:
  * Graphics:
